RESOLVED FIXED220583
[GStreamer][EME][Thunder] Bail out on failed response message for challenges
https://bugs.webkit.org/show_bug.cgi?id=220583
Summary [GStreamer][EME][Thunder] Bail out on failed response message for challenges
Xabier Rodríguez Calvar
Reported 2021-01-13 01:55:18 PST
[GStreamer][EME][Thunder] Bail out on failed response message for challenges
Attachments
Patch (1.94 KB, patch)
2021-01-13 02:01 PST, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2021-01-13 02:01:14 PST
Philippe Normand
Comment 2 2021-01-13 03:52:42 PST
Comment on attachment 417517 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417517&action=review > Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.cpp:365 > + ASSERT_NOT_REACHED(); How is this different from an ASSERT? In debug build you'll still crash here if the framework sent an empty message.
Xabier Rodríguez Calvar
Comment 3 2021-01-13 04:36:29 PST
(In reply to Philippe Normand from comment #2) > Comment on attachment 417517 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=417517&action=review > > > Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.cpp:365 > > + ASSERT_NOT_REACHED(); > > How is this different from an ASSERT? In debug build you'll still crash here > if the framework sent an empty message. Cause there is a return and it won't crash in line 370.
EWS
Comment 4 2021-01-13 04:52:13 PST
Committed r271437: <https://trac.webkit.org/changeset/271437> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417517 [details].
Radar WebKit Bug Importer
Comment 5 2021-01-13 04:53:13 PST
Note You need to log in before you can comment on or make changes to this bug.